# agi_agents

./: llm_wrapper.py
.github/workflows/: publish.yml
agi_agents_package/: MANIFEST.in  README.md  pyproject.toml  setup.py
agi_agents_package/agi_agents/: __init__.py  agi_agent.py  ai_agent.py  nicegui_backup.py
agi_agents_package/agi_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agi_agents_package/agi_agents/agents_canvas/: __init__.py  nice_gui.py  templates.py
agi_agents_package/agi_agents/agents_canvas/assets/: board.js  styles.css
agi_agents_package/ai_agent.egg-info/: SOURCES.txt  requires.txt
ai_agent_package/: README.md  pyproject.toml  setup.py
ai_agent_package/ai_agent/: __init__.py
ai_agent_package/ai_agent.egg-info/: PKG-INFO
